; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/common/tuners/extr_tda18271-fe.c_tda18271c2_rf_cal_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/common/tuners/extr_tda18271-fe.c_tda18271c2_rf_cal_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.tda18271_priv* }
%struct.tda18271_priv = type { i8*, i32 }

@R_EP1 = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [51 x i8] c"tda18271: RF tracking filter calibration complete\0A\00", align 1
@.str.1 = private unnamed_addr constant [50 x i8] c"tda18271: RF tracking filter calibration failed!\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*)* @tda18271c2_rf_cal_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tda18271c2_rf_cal_init(%struct.dvb_frontend* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.dvb_frontend*, align 8
  %4 = alloca %struct.tda18271_priv*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %3, align 8
  %7 = load %struct.dvb_frontend*, %struct.dvb_frontend** %3, align 8
  %8 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %7, i32 0, i32 0
  %9 = load %struct.tda18271_priv*, %struct.tda18271_priv** %8, align 8
  store %struct.tda18271_priv* %9, %struct.tda18271_priv** %4, align 8
  %10 = load %struct.tda18271_priv*, %struct.tda18271_priv** %4, align 8
  %11 = getelementptr inbounds %struct.tda18271_priv, %struct.tda18271_priv* %10, i32 0, i32 0
  %12 = load i8*, i8** %11, align 8
  store i8* %12, i8** %5, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = load i64, i64* @R_EP1, align 8
  %15 = getelementptr inbounds i8, i8* %13, i64 %14
  %16 = load i8, i8* %15, align 1
  %17 = zext i8 %16 to i32
  %18 = and i32 %17, 16
  %19 = icmp eq i32 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %1
  %21 = load %struct.tda18271_priv*, %struct.tda18271_priv** %4, align 8
  %22 = getelementptr inbounds %struct.tda18271_priv, %struct.tda18271_priv* %21, i32 0, i32 1
  store i32 0, i32* %22, align 8
  br label %23

23:                                               ; preds = %20, %1
  %24 = load %struct.tda18271_priv*, %struct.tda18271_priv** %4, align 8
  %25 = getelementptr inbounds %struct.tda18271_priv, %struct.tda18271_priv* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 8
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %23
  store i32 0, i32* %2, align 4
  br label %51

29:                                               ; preds = %23
  %30 = load %struct.dvb_frontend*, %struct.dvb_frontend** %3, align 8
  %31 = call i32 @tda18271_calc_rf_filter_curve(%struct.dvb_frontend* %30)
  store i32 %31, i32* %6, align 4
  %32 = load i32, i32* %6, align 4
  %33 = call i64 @tda_fail(i32 %32)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %36

35:                                               ; preds = %29
  br label %47

36:                                               ; preds = %29
  %37 = load %struct.dvb_frontend*, %struct.dvb_frontend** %3, align 8
  %38 = call i32 @tda18271_por(%struct.dvb_frontend* %37)
  store i32 %38, i32* %6, align 4
  %39 = load i32, i32* %6, align 4
  %40 = call i64 @tda_fail(i32 %39)
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %42, label %43

42:                                               ; preds = %36
  br label %47

43:                                               ; preds = %36
  %44 = call i32 @tda_info(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0))
  %45 = load %struct.tda18271_priv*, %struct.tda18271_priv** %4, align 8
  %46 = getelementptr inbounds %struct.tda18271_priv, %struct.tda18271_priv* %45, i32 0, i32 1
  store i32 1, i32* %46, align 8
  br label %49

47:                                               ; preds = %42, %35
  %48 = call i32 @tda_info(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.1, i64 0, i64 0))
  br label %49

49:                                               ; preds = %47, %43
  %50 = load i32, i32* %6, align 4
  store i32 %50, i32* %2, align 4
  br label %51

51:                                               ; preds = %49, %28
  %52 = load i32, i32* %2, align 4
  ret i32 %52
}

declare dso_local i32 @tda18271_calc_rf_filter_curve(%struct.dvb_frontend*) #1

declare dso_local i64 @tda_fail(i32) #1

declare dso_local i32 @tda18271_por(%struct.dvb_frontend*) #1

declare dso_local i32 @tda_info(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
